<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/msgUserImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/dark15"
        android:contentDescription="@string/avater" />

    <TextView
        android:id="@+id/msgUserNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jackest_g"
        app:layout_constraintBottom_toBottomOf="@+id/timeLbl"
        app:layout_constraintStart_toEndOf="@+id/msgUserImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/sept_24_20_05"
        app:layout_constraintStart_toEndOf="@+id/msgUserNameLbl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgBodyLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/in_software_engineering_the_singleton_pattern_is_a_software_design_pattern_that_restricts_the_instantiation_of_a_class_to_one_single_instance_this_is_useful_when_exactly_one_object_is_needed_to_coordinate_actions_across_the_system_the_term_comes_from_the_mathematical_concept_of_a_singleton_critics_consider_the_singleton_to_be_an_anti_pattern_in_that_it_is_frequently_used_in_scenarios_where_it_is_not_beneficial_introduces_unnecessary_restrictions_in_situations_where_a_sole_instance_of_a_class_is_not_actually_required_and_introduces_global_state_into_an_application"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/msgUserImage"
        app:layout_constraintTop_toBottomOf="@+id/timeLbl"
        app:layout_constraintVertical_bias="0.011" />
</androidx.constraintlayout.widget.ConstraintLayout>